<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.LoginIntro">

    <TextView
        android:id="@+id/txtLoginSubHeader"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/isn_t_life_a_collection_of_weird_quizzes_with_n_no_answer_to_half_the_question"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtLoginHeader"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_quiz"
        app:layout_constraintBottom_toTopOf="@+id/txtLoginSubHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toTopOf="@+id/txtLoginHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_login_intro"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnGetStarter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/get_started"
        android:background="@drawable/btn_primary"
        android:textColor="@color/colorPrimaryButton"
        app:layout_constraintEnd_toEndOf="@+id/txtLoginSubHeader"
        app:layout_constraintStart_toStartOf="@+id/txtLoginSubHeader"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginSubHeader" />

    <ImageView
        android:id="@+id/imageBg"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_wave"/>
</androidx.constraintlayout.widget.ConstraintLayout>